# histoRust

./: Cargo.toml  README.md  output.txt
src/: input.txt  main.rs  stripfile.rs  stripstring.rs  translate.rs
