[package]
name = "historust"
version = "0.1.0"
authors = ["JamesAnthonyDellaMorte <jamesanthony@delresearch.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
counter = "*"
regex = "*"
ureq = { version = "*", features = ["json"] }
